--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-map-gl": "^8.0.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250605.0",
     "@tailwindcss/postcss": "^4",
     "@types/geojson": "^7946.0.16",
     "@types/node": "^20",
