--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-map-gl": "^8.0.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250605.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
     "@types/geojson": "^7946.0.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.19.1"
   }
 }
